syntax = "proto3";
package product;

option go_package = "github.com/Ultimate-Super-WebDev-Corp/gateway/gen/services/product";

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/protobuf/empty.proto";
import "github.com/Ultimate-Super-WebDev-Corp/gateway/services/review/review.proto";

service Product {
  rpc SearchByUUIDs (SearchByUUIDsRequest) returns (ProductWithID) {}
  rpc Create (ProductMsg) returns(google.protobuf.Empty) {}
  rpc GetByID (GetByIDRequest) returns (ProductWithID){}
  rpc Catalog (CatalogRequest) returns (CatalogResponse){}
}

message SearchByUUIDsRequest {
  repeated string UUIDs = 1 [(validator.field) = {repeated_count_min: 1}];
}

message ProductMsg {
  string Name = 1 [(validator.field) = {string_not_empty: true}];
  string Brand = 2 [(validator.field) = {string_not_empty: true}];
  string Description = 3 [(validator.field) = {string_not_empty: true}];
  repeated string Images = 4;
  string country = 5;
}

message ProductWithID {
  uint64 Id = 1;
  ProductMsg Product = 2;
}

message GetByIDRequest {
  uint64 Id = 1 [(validator.field) = {int_gt : 0}];
}

message CatalogRequest {
  repeated Sort Sorts = 1;
  repeated Filter Filters = 2;
  uint64 Token = 3;
  uint64 Limit = 4;
}

message Sort {
  string Field = 1;
  string Name = 2;
  bool Ascending = 3;
}

message Filter {
  string Field = 1;
  string Name = 2;
  oneof Value {
    ListFilter ListFilter = 4;
    RangeFilter RangeFilter = 5;
  }
}

message ListFilter {
  repeated string List = 1;
}

message RangeFilter {
  int64 Min = 1;
  int64 Max = 2;
}

enum OrderBy {
  rating = 0;
  votes = 1;
}

message CatalogResponse {
  repeated CatalogProduct Products = 1;
  repeated Filter Filters = 2;
  repeated Sort Sorts = 3;
  uint64 NextToken = 4;
}


message CatalogProduct {
  uint64 Id = 1;
  string Name = 2;
  string Brand = 3;
  review.Rating Rating = 4;
  uint64 Votes = 5;
  repeated string Images = 6;
}
