syntax = "proto3";
package search;

option go_package = "gen/services/search";

import "github.com/mwitkow/go-proto-validators/validator.proto";

service Search {
  rpc SearchByIds (SearchByIdsRequest) returns (Product) {}
}

message SearchByIdsRequest {
  repeated string UUIDs = 1[(validator.field) ={repeated_count_min: 1}];
}

message Product {

}
